Fix wrapper property preservation review feedback
Signed-off-by: itsCodeTide <ayushjethe029@gmail.com>